--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,10 +1,12 @@
-name: Lint and Build CI
+name: Publish to NPM
 
 # Triggers the workflow on push to any branch
 on:
-    push:
-      branches:
-        - "**"
+  push:
+    branches:
+      - "main"
+
+concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
   lint_and_build:
@@ -33,3 +35,10 @@ jobs:
     # Run the build
     # - name: Build Project
     #   run: npm run build  # Only if you need a build step
+
+    # Step 5: Publish to NPM
+    - name: Publish
+    - id: changesets
+      uses: changesets/action@v1
+      with:
+        publish: npm run lint
