--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,6 @@
 name: Publish to NPM
 
-# Triggers the workflow on push to any branch
+# Triggers the workflow on push to the main branch
 on:
   push:
     branches:
@@ -36,9 +36,9 @@ jobs:
     # - name: Build Project
     #   run: npm run build  # Only if you need a build step
 
-    # Step 5: Publish to NPM
-    - name: Publish
-    - id: changesets
+    # Step 5: Publish to NPM using Changesets
+    - name: Publish using Changesets
+      id: changesets
       uses: changesets/action@v1
       with:
-        publish: npm run lint
+        publish: npm publish
