--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,5 +40,7 @@ jobs:
     - name: Publish using Changesets
       id: changesets
       uses: changesets/action@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         publish: npm publish
