add: npm token to publish.yml

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "main": "index.mjs",
   "module": "index.mjs",
   "version": "1.0.1",
+  "private": false,
   "scripts": {
     "lint": "eslint ."
   },
